updating the website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</h1>
 
 		<p>
-			<strong>Your Name</strong> — <em>Your MIT Email Address</em>
+			<strong>Autumn Artist</strong> — <em>arartist@mit.edu</em>
 		</p>
 	</header>
 
@@ -22,7 +22,7 @@
 			<h2>Reading & Critique</h2>
 
 			<figure>
-				<img src="https://vis-society.github.io/assets/imgs/covid-spiral.png" alt="" />
+				<img src="https://vis-society.github.io/assets/imgs/covid-spiral.png" alt="" width="50%"/>
 			</figure>
 
 			<p>
@@ -30,9 +30,12 @@
 			</p>
 
 			<ul>
-				<li>INSIGHT 1</li>
-				<li>INSIGHT 2</li>
-				<li>INSIGHT 3</li>
+				<li>The spiral layout displays the pattern in the Covid-19 cases, each loop represents a different year ranging from 2020 to 2022.</li>
+				<li>The largest spikes in cases appear around in January of each year (other than 2020), and 2022 seems to be having the highest peak.</li>
+				<li>The 2021 and 2022 spirals are significantly larger than those of 2020, which indicates the case numbers have been increasing over time.</li>
+				<li>The 7 Day average line represents the 7-day average which works to smooth out any fluctuations while still showing the overall trend of rising and falling cases. </li>
+				<li>There seems to be a consistent dip in cases during the middle of the year, in summer, but is consistently followed by a rise towards the end of the year, and beginning of the next one.</li>
+				<li>After June 2021 cases started rising and remained roughly constant until December 2021 where it started rising and drastically rose (probably leading to another spike) starting in mid December 2021 leading into January 2022.</li>
 			</ul>
 
 			<p>
@@ -40,9 +43,8 @@
 			</p>
 
 			<ul>
-				<li>CRITIQUE 1</li>
-				<li>CRITIQUE 2</li>
-				<li>CRITIQUE 3</li>
+				<li>The spiral graph format does well to effectively demonstrate the cyclical nature of the Covid-19 waves. This format also does well to show consistent patterns and trends. The visualization successfully highlights any key peaks, particularly the sharp spikes in January of each year which reinforces the idea of these seasonal surges. The 7-day average line also effectively smooths fluctuations which makes it easier to discern overall trends. This graph is also much more dynamic which encourages engagement. After looking at the article, the visualization effectively supports its argument, that the Covid-19 cases, specifically the Omicron variant tends to follow a recurring seasonal pattern. However, over time the cases have consistently been rising, this graph also displays the goal clearly which is to persuade people to get vaccinated. </li>
+				<li>Although the spiral format of this graph is visually appealing, it doesn’t seem to be the most intuitive way to track case numbers over time. Readers that are unfamiliar with this format may struggle to interpret the data quickly, especially the importance of the 7-day average line. Comparing the yearly peaks is also somewhat difficult, a more straightforward vertical or side-by-side comparison might better emphasize how each wave differs in magnitude. I think it’s also not immediately clear where to begin reading, viewers may start from the center and move outward, although the directional cues definitely guide the audience, I think they could be a bit more obvious. One major area of improvement would be the labeling within the graph. Although the message seems to be clear when looking at the graph, after reading the article and realizing that the Covid-19 cases were specifically the Omicron variant I think the message was definitely muddled due to the lack of proper explanation and labeling. As a result of this, viewers may assume this to be about general Covid-19 cases, leaving viewers to dismiss a graph like this, writing it off as misinformation.</li>
 			</ul>
 		</section>
 
@@ -50,9 +52,9 @@
 			<h2>Visualization Sketches</h2>
 
       <figure>
-				<img src="IMAGE_FILENAME" alt="" />
+				<img src="img/sketch1.jpg" alt="" width="50%"/>
 				<figcaption>
-          BRIEF CAPTION HERE.
+					Depicts the trend in newly confirmed cases over time, highlighting peaks in early 2021 and early 2022.
 				</figcaption>
 			</figure>
 
@@ -61,15 +63,15 @@
 			</p>
 
 			<ul>
-				<li>RATIONALE 1</li>
-				<li>RATIONALE 2</li>
-				<li>RATIONALE 3</li>
+				<li>The motivation for this graph is to improve the clarity of the previous graph through the use of a standard line graph where each year has its own line. This graph makes it easy  to compare the peaks and troughs of each year. </li>
+				<li>Using the line graph we can also retain the original 7-day average smoothness to make it easier to track trends. This graph is commonly used which makes it easier for viewers to quickly grasp what’s going on. </li>
+				<li>One potential downside is that the line graph doesn’t make it as easy to demonstrate recurring patterns like the spiral graph. In the next graphs I would like to show more of the cumulative growth trends.</li>
 			</ul>
 
 			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
+				<img src="img/sketch2.jpg" alt="" width="50%"/>
 				<figcaption>
-          BRIEF CAPTION HERE.
+					Illustrates how total confirmed cases have built up year by year, with each color band representing a different year.
 				</figcaption>
 			</figure>
 
@@ -78,15 +80,15 @@
 			</p>
 
 			<ul>
-				<li>RATIONALE 1</li>
-				<li>RATIONALE 2</li>
-				<li>RATIONALE 3</li>
+				<li>With the area chat I wanted to show the growth trends clearly. The area chart is useful to show the total impact of the pandemic rather than daily spikes, which works to highlight how case numbers accelerate during these surges. The area chart did well to smooth out noise, focusing more so on the cumulative impact, thus making the data easier to understand. </li>
+				<li>Some issues were that I realized it wasn’t very effective for short term trends since it doesn’t show any decreases. Since this graph is combined all the years, it makes it a lot more difficult to make comparisons between years. Newer years have higher cumulative values since they build on previous totals, this cumulative trend can then exaggerate the severity of later waves. </li>
+				<li>Earlier waves look smaller compared to later ones even if they were just as severe. With the next graph I would like to compare months to show seasonal trends more effectively.</li>
 			</ul>
 
 			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
+				<img src="img/sketch3.jpg" alt="" width="50%"/>
 				<figcaption>
-          BRIEF CAPTION HERE.
+					Compares the monthly distribution of newly confirmed cases across 12 months, indicating variation and outliers by month.
 				</figcaption>
 			</figure>
 
@@ -95,9 +97,9 @@
 			</p>
 
 			<ul>
-				<li>RATIONALE 1</li>
-				<li>RATIONALE 2</li>
-				<li>RATIONALE 3</li>
+				<li>Unlike the previous graphs, the box plots are able to display spread, median and outliers which help to identify extreme spikes in cases. This graph shows more variability within each month, making it easier to compare across months. </li>
+				<li>You can instantly see how some months have significantly more cases as they are side by side. Lastly it highlights extreme surges, if a month had an unusually high case it will show up as an easily identifiable outlier. </li>
+				<li>Some issues may be that since box plots aren’t used as often, viewers might struggle to interpret them correctly. It also doesn’t show the exact dates of these peaks. These boxplots are also not ideal for cumulative trends, it doesn’t show how cases have evolved over time, rather it simply shows the spread of each month.</li>
 			</ul>
 		</section>
 
@@ -105,9 +107,9 @@
 			<h2>Final Visualization Design</h2>
       
 			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
+				<img src="img/finalVis.png" alt="" width="50%"/>
 				<figcaption>
-          BRIEF CAPTION HERE.
+					Shows monthly Omicron variant case counts arranged in a circular format, with each ring representing a different year.
 				</figcaption>
 			</figure>
 
@@ -116,14 +118,15 @@
 		<section>
 			<h2>Design Process & Design Decisions</h2>
 
-			<p>
-        DESCRIBE YOUR DESIGN PROCESS AND DECISION DECISIONS HERE.
-      </p>
+			<p>The ultimate goal of this visualization was to effectively communicate the seasonal patterns of the Covid-19 cases while still being able to make year comparisons more intuitive. I chose the radial bar chart because it retains the cyclical nature of the original design while improving on the readability and structure. The key story I wanted to tell was that the Covid-19 cases seem to follow a seasonal pattern where surges occur towards the beginning of each year and towards the end of the previous year. Overall case numbers have increased over time and in the summer months you generally see lower case counts, followed by a gradual increase in the fall. To improve upon the original design, which was harder to read, this format allows for an easier comparison which reinforces how the pandemic continues to evolve.</p>
+			<p>The mark type was the Radial Bar chart which was chosen because it keeps the cyclical pattern from the original graph. Each year has its own rings which prevents overlapping allowing for clear comparisons. The separation between bars allows viewers to easily distinguish  between time periods. In regards to size, scale and position; The bar lengths originate from the number of cases which makes the severity of outbreaks apparent. Each year’s bars start at a different radial distance from the center to prevent overlap, and the months are evenly spaced around the circle which help with comparison. As shown with the legend the yellow/orange color represents 2020 which was the first year of the pandemic with relatively lower case counts. Next is the red color representing 2021, displaying the increase in cases making it clear how the situation started escalating. Finally the dark red color representing 2022, signifies the highest peaks particularly highlighting Omicron’s surge. When it came to sorting and transforming the data, since the daily fluctuations weren’t as important for this analysis I aggregated cases by month to focus more so on broader seasonal trends. Case counts were also scaled to a percentage of the maximum value which allowed for better visual comparison. </p>
+			<p>Some of the tradeoffs for this design was that the exact values are not immediately available. Although the bar lengths provide a visual sense of the magnitude, a numeric label would make this more precise. This type of graph is also less intuitive, some users might still struggle with interpretation compared to other graphs, for example a linear time series graph.</p>
 
       <h3>Reflection</h3>
 
+	  <p>The goal with using the radial bar chart is to keep the cyclical nature of the original design while also making it easier to compare years. In doing so I am giving each year its own ring to allow clear comparisons without overlapping. In the original graph I really liked the monthly trends and in using the radial bar graph, the monthly trends will still be revident which will reinforce seasonality. Lastly, since the bar lengths represent case counts, the magnitude will be more intuitive.</p>
       <p>
-        WRITE YOUR FINAL REFLECTION HERE.
+        In regards to critiques, the spiral format is visually appealing but not intuitive. To address this the radial bar chart maintains a cyclical structure but removes some of the unnecessary complexity. I also found that the original graph made comparing peaks across years to be difficult, to combat this each year has its own distinct ring, which allows for direct comparisons without overlap. Another issue I had with the original graph was that it wasn’t clear where to start reading, and although the gaps between the rings make the structure more clear, the graph could still make it more clear as to where you should start. Maybe adding space between January and December could help to make this more clear.
       </p>
 		</section>
 	</main>
